Test/semantic_tests/error06_non_lvalue.expected
Error type 6 at Line 4: Non-lvalue on left side of assignment.
