Test/semantic_tests/error06_non_lvalue.cmm
int main()
{
    int i;
    int j;
    (i + j) = 5;
    return 0;
}
